--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dev_dependencies:
   freezed: ^2.5.2
   json_serializable: ^6.8.0
   isar_generator: ^3.1.0+1
+  riverpod: ^2.5.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
